[gd_scene load_steps=5 format=3 uid="uid://bwagcydq32xo1"]

[ext_resource type="Script" path="res://scripts/ui/battle/popup_character_info/popup_with_character_additional_info/components/skill_selected_button.gd" id="1_af30g"]
[ext_resource type="Texture2D" uid="uid://crgq4koj1emym" path="res://sprites/battle/skills/test_skill.svg" id="2_fve3c"]
[ext_resource type="Texture2D" uid="uid://busolphd4lb1w" path="res://sprites/ui/battle/popup_character_info/popup_skill_info/skill_colldown_icon.svg" id="3_gdg3v"]
[ext_resource type="FontFile" uid="uid://dbw7isfcog8vr" path="res://fonts/tilda_sans/tilda-sans_bold.ttf" id="4_3txnu"]

[node name="SkillSelectedButton" type="Button"]
custom_minimum_size = Vector2(64, 64)
offset_right = 70.0
offset_bottom = 70.0
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
mouse_filter = 1
theme_override_colors/icon_normal_color = Color(0.686275, 0.686275, 0.686275, 1)
theme_override_colors/icon_disabled_color = Color(0.490196, 0.490196, 0.490196, 1)
toggle_mode = true
action_mode = 0
icon = ExtResource("2_fve3c")
flat = true
alignment = 2
icon_alignment = 1
expand_icon = true
script = ExtResource("1_af30g")

[node name="CooldownIcon" type="TextureRect" parent="."]
self_modulate = Color(0.2, 0.666667, 1, 1)
custom_minimum_size = Vector2(31, 36)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("3_gdg3v")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Counter" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.985714
anchor_top = 1.02857
anchor_right = 1.02857
anchor_bottom = 1.07143
offset_left = -23.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0.0392157, 0.0392157, 0.0392157, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_3txnu")
theme_override_font_sizes/font_size = 24
text = "9"
horizontal_alignment = 2
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
